<resources>
    <string name="app_name">英语刷题神器</string>

    <!-- 提示 -->
    <string name="hint_layout_no_data">亲，暂无数据</string>
    <string name="hint_layout_error_request">亲，请求出错了</string>
    <string name="hint_layout_error_network">亲，没有网络了</string>

    <!-- 主页 -->
    <string name="home_exit_hint">再按一次退出</string>
    <string name="home_nav_index">首页</string>
    <string name="home_nav_found">发现</string>
    <string name="home_nav_message">作业</string>
    <string name="home_nav_me">我的</string>
    <string name="home_nav_select_problem">自主选题</string>

    <!-- 登录 -->
    <string name="login_register">注册</string>
    <string name="login_phone_hint">请输入手机号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_forget">忘记密码？</string>
    <string name="login_text">登录</string>

    <string name="login_other">其他登录方式</string>

    <!-- 注册 -->
    <string name="register_title">注册</string>
    <string name="register_hint">手机号仅用于登录和保护账号安全</string>
    <string name="register_login">登录</string>
    <string name="register_password_hint1">设置密码</string>
    <string name="register_password_hint2">再次输入密码</string>
    <string name="register_password_input_error">两次密码输入不一致，请重新输入</string>

    <!-- 设置 -->
    <string name="setting_title">设置</string>

    <string name="setting_language">语言切换</string>
    <string name="setting_language_simple">简体中文</string>
    <string name="setting_language_complex">繁体中文</string>

    <string name="setting_update">检查更新</string>
    <string name="setting_cache">清空缓存</string>
    <string name="setting_auto">自动登录</string>
    <string name="setting_agreement">项目地址</string>
    <string name="setting_about">关于我</string>
    <string name="setting_exit">退出登录</string>

    <!-- 关于 -->
    <string name="about_title">关于我</string>
    <string name="about_copyright">Copyright © 2019</string>

    <!-- 忘记密码 -->
    <string name="password_forget_title">忘记密码</string>

    <!-- 重置密码 -->
    <string name="password_reset_title">设置登录密码</string>
    <string name="password_reset_phone_hint1">设置6&#8211;18位登录密码</string>
    <string name="password_reset_phone_hint2">重新输入一次密码</string>
    <string name="password_reset_input_error">两次密码输入不一致，请重新输入</string>

    <!-- 升级对话框 -->
    <string name="dialog_update_button">升级</string>

    <string name="dialog_update_download_fail">启动下载失败</string>
    <string name="dialog_update_permission_hint">必须先要授予权限才能正常下载更新哦</string>

    <string name="dialog_update_status_running">下载中</string>
    <string name="dialog_update_status_successful">立即安装</string>
    <string name="dialog_update_status_failed">下载失败</string>
    <string name="dialog_update_status_paused">暂停中</string>
    <string name="dialog_update_status_pending">等待下载</string>

    <!-- 分享对话框 -->
    <string name="dialog_share_platform_wx">微信</string>
    <string name="dialog_share_platform_wx_pyq">朋友圈</string>
    <string name="dialog_share_platform_qq">QQ</string>
    <string name="dialog_share_platform_qq_kj">QQ空间</string>

    <!-- 校验手机号 -->
    <string name="phone_verify_title">手机号验证</string>
    <string name="phone_verify_current_phone">当前手机号：%s</string>

    <!-- 修改手机号 -->
    <string name="phone_reset_title">修改手机号</string>
    <string name="phone_reset_change_hint">下次登录请使用更换后的新手机号登录</string>
    <string name="phone_reset_commit">立即绑定</string>

    <string name="phone_reset_commit_succeed">绑定成功，下次登录请使用新手机号登录</string>

    <!-- 个人资料 -->
    <string name="personal_data_title">个人资料</string>
    <string name="personal_data_head">头像</string>

    <string name="personal_data_id">用户ID</string>
    <string name="personal_data_name">昵称</string>
    <string name="personal_data_name_hint">设置昵称</string>

    <string name="personal_data_address">地区</string>
    <string name="personal_data_address_hint">请选择</string>

    <string name="personal_data_phone">手机号码</string>
    <string name="personal_data_phone_hint">立即绑定</string>

    <!-- 浏览器 -->
    <string name="web_title">加载中&#8230;</string>

    <!--My-->
    <string name="next_problem">下一题</string>

</resources>