<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.PersonalDataActivity">

    <com.hjq.bar.TitleBar
        android:id="@+id/tb_personal_data_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/personal_data_title" />

    <com.hjq.widget.SettingBar
        android:id="@+id/sb_person_data_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_20"
        app:bar_leftText="@string/personal_data_id"
        app:bar_rightHint="@string/personal_data_name_hint"/>

    <com.hjq.widget.SettingBar
        android:id="@+id/sb_person_data_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_leftText="@string/personal_data_name"
        app:bar_rightHint="@string/personal_data_name_hint" />

</LinearLayout>