<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.activity.RegisterActivity">

    <com.hjq.bar.TitleBar
        android:id="@+id/tb_register_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_100"
        app:backButton="false"
        app:barStyle="transparent"
        app:leftColor="@color/colorAccent"
        app:leftTitle="@string/register_login"
        app:title="" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/space_80"
            android:layout_marginRight="@dimen/space_80"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_40"
                android:text="@string/register_title"
                android:textColor="@color/black60"
                android:textSize="@dimen/font_size_46px" />

            <LinearLayout
                android:id="@+id/ll_register_edit1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_60"
                android:gravity="center_vertical"
                android:orientation="horizontal"/>

            <View style="@style/HorizontalLineStyle" />

            <EditText
                android:id="@+id/et_register_code"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_40"
                android:hint="输入用户名"
                android:inputType="text"
                android:maxLength="8"
                android:maxLines="1" />

            <View style="@style/HorizontalLineStyle" />

            <EditText
                android:id="@+id/et_register_password1"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_40"
                android:hint="@string/register_password_hint1"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1" />

            <View style="@style/HorizontalLineStyle" />

            <EditText
                android:id="@+id/et_register_password2"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_40"
                android:hint="@string/register_password_hint2"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1" />

            <View style="@style/HorizontalLineStyle" />

            <Button
                android:id="@+id/btn_register_commit"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_60"
                android:layout_marginBottom="@dimen/space_40"
                android:text="@string/register_title" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>